--- a/VerokeTask09Sep24/main.html
+++ b/VerokeTask09Sep24/main.html
@@ -48,7 +48,7 @@
                     <button class="navButton">Logs</button>
                     <button class="navButton">Comments</button>
                 </li>
-                <span>
+                <span id="buttonEditApplicationSpan">
                     <button id="buttonEditApplication">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                             class="bi bi-pencil-square" viewBox="0 0 16 16">
@@ -70,7 +70,7 @@
                     Adium users can review, approve, reject or send application back for resubmission.
                 </p>
                 <span id="header-Span3-Inner1">
-                    <button id="button-Discion">
+                    <button class="button-Discion" id="button-Discion1">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                             class="bi bi-arrow-clockwise" viewBox="0 0 16 16">
                             <path fill-rule="evenodd"
@@ -80,8 +80,8 @@
                         </svg>
                         Resubmission
                     </button>
-                    <button id="button-Discion">Reject</button>
-                    <button id="button-Discion">Approve</button>
+                    <button class="button-Discion" id="button-Discion2">Reject</button>
+                    <button class="button-Discion" id="button-Discion3">Approve</button>
                 </span>
             </span>
         </header>
@@ -92,7 +92,8 @@
                         <path d="M9.293 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V4.707A1 1 0 0 0 13.707 4L10 .293A1 1 0 0 0 9.293 0M9.5 3.5v-2l3 3h-2a1 1 0 0 1-1-1m.5 10v-6a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5m-2.5.5a.5.5 0 0 1-.5-.5v-4a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-.5.5zm-3 0a.5.5 0 0 1-.5-.5v-2a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-.5.5z"/>
                     </svg>
                     <p>
-                        Loan ID <br/>
+                        <span class="lightGry"> Loan ID</span>
+                        <br/>
                         <strong>
                             3858FA
                         </strong>
@@ -103,10 +104,13 @@
                         <path d="M9.293 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V4.707A1 1 0 0 0 13.707 4L10 .293A1 1 0 0 0 9.293 0M9.5 3.5v-2l3 3h-2a1 1 0 0 1-1-1m.5 10v-6a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5m-2.5.5a.5.5 0 0 1-.5-.5v-4a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-.5.5zm-3 0a.5.5 0 0 1-.5-.5v-2a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-.5.5z"/>
                     </svg>
                     <p>
-                        Application Status
+                        <span class="lightGry">
+                            Application Status
+                        </span>
+                       
                         <br/>
-                        <strong>
-                             Down Payment Doc
+                        <strong class="LightOrg">
+                            Down Payment Doc
                         </strong>
                     </p>
                 </span>
@@ -116,7 +120,9 @@
                         <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5M1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4z"/>
                     </svg>
                     <p>
-                        Submission Date
+                        <span class="lightGry">
+                           Submission Date
+                        </span>
                         <br/>
                         <strong>
                             -
@@ -131,7 +137,9 @@
                         <path d="M9.998 5.083 10 5a2 2 0 1 0-3.132 1.65 6 6 0 0 1 3.13-1.567"/>
                     </svg>
                     <p>
-                        Loan Balance 
+                        <span class="lightGry">
+                            Loan Balance 
+                        </span>
                         <br/>
                         <strong>
                         QAR 120,000
@@ -146,24 +154,24 @@
                         Terms of Application
                     </strong>
                     <span class="inline-Inline">
-                       <p> Application </p>
-                        <strong>QAR 10,000</strong>
+                       <span> Application </span>
+                        <strong class="C-DarkGreen">QAR 10,000</strong>
                     </span>
                     <span class="inline-Inline">
-                        <p> Application </p>
-                         <strong>QAR 10,000</strong>
+                        <span> Period </span>
+                         <strong>2 Years</strong>
                      </span>
                      <span class="inline-Inline">
-                        <p> Application </p>
-                         <strong>QAR 10,000</strong>
+                        <span> Interval </span>
+                         <strong class="C-DarkGreen">Monthly</strong>
                      </span>
                      <span class="inline-Inline">
-                        <p> Application </p>
-                         <strong>QAR 10,000</strong>
+                        <span> Annual Insurance Rate </span>
+                         <strong class="C-DarkGreen">10%</strong>
                      </span>
                      <span class="inline-Inline">
-                        <p> Application </p>
-                         <strong>QAR 10,000</strong>
+                        <span> Membership Allowed or not?</span>
+                         <strong class="C-LightGreen">Blox Member</strong>
                      </span>
                 </span>
                 <span class="mainContainer-Span2-Inner">
@@ -171,20 +179,20 @@
                         Vehical Information
                     </strong>
                     <span class="inline-Inline">
-                        <p> Application </p>
-                         <strong>QAR 10,000</strong>
+                        <span> ID </span>
+                         <strong>BCB 834</strong>
                      </span>
                      <span class="inline-Inline">
-                        <p> Application </p>
-                         <strong>QAR 10,000</strong>
+                        <span> Make </span>
+                         <strong>Lexus CT200H</strong>
                      </span>
                      <span class="inline-Inline">
-                        <p> Application </p>
-                         <strong>QAR 10,000</strong>
+                        <span> Model </span>
+                         <strong>204</strong>
                      </span>
                      <span class="inline-Inline">
-                        <p> Application </p>
-                         <strong>QAR 10,000</strong>
+                        <span> Price Range </span>
+                         <strong class="C-DarkGreen">QAR 16,000</strong>
                      </span>
                 </span>
                 
@@ -196,28 +204,28 @@
                         Customer Information
                     </strong>
                     <span class="inline-Inline">
-                       <p> Full Name  </p>
+                       <span> Full Name  </span>
                         <strong>Muhammad Saleeh</strong>
                     </span>
                     <span class="inline-Inline">
-                        <p> Email Address</p>
+                        <span> Email Address</span>
                          <strong>m.shahid9115@gmail.com</strong>
                      </span>
                      <span class="inline-Inline">
-                        <p> Phone Number </p>
+                        <span> Phone Number </span>
                          <strong>00000000000</strong>
                      </span>
                      <span class="inline-Inline">
-                        <p> Nation ID </p>
+                        <span> Nation ID </span>
                          <strong>xzy000000</strong>
                      </span>
                      <span class="inline-Inline">
-                        <p> Gender </p>
+                        <span> Gender </span>
                          <strong>Male</strong>
                      </span>
                      <span class="inline-Inline">
-                        <p> MembersShip  </p>
-                         <strong>* Blox Member</strong>
+                        <span> MembersShip  </span>
+                         <strong class="C-LightGreen">* Blox Member</strong>
                      </span>
                 </span>
                 <span class="mainContainer-Span2-Inner">
@@ -229,43 +237,43 @@
                      </span>
                      <span class="inline-Inline">
                         <strong>Qatar ID Front.PNG</strong>
-                        <p> preview </p>
+                        <span class="C-LightGreen"> Preview </span>
                      </span>
                      <span class="inline-Inline">
                          <strong>Salary Certificates.PNG</strong>
-                         <p>
-                            preview
-                         </p>
+                         <span class="C-LightGreen">
+                            Preview
+                         </span>
                      </span>
                      <span class="inline-Inline">
                          <strong>Bank Statements</strong>
                      </span>
                      <span class="inline-Inline">
                         <strong>Statements.pdf</strong>
-                        <p>
-                           preview
-                        </p>
+                        <span class="C-LightGreen"> 
+                           Preview
+                        </span>
                     </span>
                     <span class="inline-Inline">
                         <strong>Statements.1pdf</strong>
-                        <p>
-                           preview
-                        </p>
+                        <span class="C-LightGreen">
+                           Preview
+                        </span>
                     </span>
                     <span class="inline-Inline">
                         <strong>Additional Documents</strong>
                     </span>
                     <span class="inline-Inline">
                         <strong>Document.pdf</strong>
-                        <p>
-                           preview
-                        </p>
+                        <span class="C-LightGreen">
+                           Preview
+                        </span>
                     </span>
                     <span class="inline-Inline">
                         <strong>Document2.pdf</strong>
-                        <p>
-                           preview
-                        </p>
+                        <span class="C-LightGreen">
+                           Preview
+                        </span>
                     </span>
 
                 </span>
