figma desgin template

--- a/VerokeTask11Sep24/main.html
+++ b/VerokeTask11Sep24/main.html
@@ -237,7 +237,7 @@
                                 <span class="List-Text">
                                     Log Hours
                                 </span>
-                                <span class="checkBox-Span">
+                                <span class="checkBox-Span" onclick="checkBox()">
                                     <img class="checkBox" src="./Pics/navIcon/CheckBox.svg" alt="CheckBox" />
                                 </span>
                             </span>
