Upload Weekend task 13Sep24

--- a/Veroke13Sep24Arsha/main.html
+++ b/Veroke13Sep24Arsha/main.html
@@ -77,7 +77,10 @@
             </nav>
         </span>
 
-        <section id="main-Section-Of-Web">
+        <section id="main-Section-Of-Web" >
+            <span id="forScrool" onscroll="scre()">
+
+           
             <div id="main-Section-Of-Web-Head">
                 <h1 id="main-Section-Of-Web-Head-Titel">
                     ARSHA
@@ -127,19 +130,13 @@
                             Pricing
                         </span>
 
-
                         <span class="NavButton Dropdown">
                             <span>
-
-
 
                                 <span id="DropdownModalone">
                                     <span class="DropDownButton">
                                         Dropdown 1
                                     </span>
-
-
-
 
                                     <span class="DropDownButton">
 
@@ -151,7 +148,6 @@
                                                     d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708" />
                                             </svg>
                                         </span>
-
 
                                     </span>
                                     <span class="DropDownButton">
@@ -175,7 +171,6 @@
                                         d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708" />
                                 </svg>
                             </span>
-
 
                         </span>
                         <span class="NavButton">
@@ -255,8 +250,8 @@
                     </tbody>
                 </table>
 
-
             </div>
+        </span>
         </section>
 
     </div>
